@startuml Database Schema
!theme plain

entity "users" {
  * id : BIGINT
  --
  * name : VARCHAR(100)
  * email : VARCHAR(100)
  * password : VARCHAR(255)
  * role : VARCHAR(20)
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

entity "tournaments" {
  * id : BIGINT
  --
  * name : VARCHAR(100)
  * description : TEXT
  * start_date : TIMESTAMP
  * end_date : TIMESTAMP
  * max_participants : INTEGER
  * current_participants : INTEGER
  * status : VARCHAR(20)
  * organizer_id : BIGINT
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

entity "tickets" {
  * id : BIGINT
  --
  * tournament_id : BIGINT
  * user_id : BIGINT
  * registration_date : TIMESTAMP
  * status : VARCHAR(20)
}

entity "audit_logs" {
  * id : BIGINT
  --
  * entity_name : VARCHAR(50)
  * entity_id : BIGINT
  * action : VARCHAR(20)
  * user_id : BIGINT
  * timestamp : TIMESTAMP
  * details : TEXT
}

tournaments ||--o{ tickets : "has"
users ||--o{ tickets : "registers"
users ||--o{ tournaments : "organizes"
users ||--o{ audit_logs : "performs"

@enduml